Initial for PA3

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="./shader.gpu"></script>
     <script src="./Utils/RichmondsMinimalSurface.js"></script>
     <script src="./main.js"></script>
+    <script src="./Utils/TextureHandler.js"></script>
 
 </head>
 
