--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>PA#2</title>
+    <title>PA#3 (Control task)</title>
 
     <style>
         body {
@@ -34,7 +34,7 @@
 </head>
 
 <body onload="init()">
-    <h1>Practical assignment №2</h1>
+    <h1>Control task (Practical assignment №3)</h1>
     <h1>RICHMOND'S MINIMAL SURFACE</h1>
     <h2>Sukhenko Bohdan, TR-41mp</h2>
 
