--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
             <input type="range" id="vGranularity" min="5" max="50" value="20" oninput="updateGranularity()">
             <span id="vGranularityValue">20</span>
         </div>
+        <div>
+            <label for="textureScale">Texture Scale:</label>
+            <input type="range" id="textureScale" min="0.1" max="5.0" value="1.0" step="0.1" oninput="updateTextureScale()">
+            <span id="textureScaleValue">1.0</span>
+        </div>
     </div>
 
 </body>
