--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
             <input type="range" id="textureScale" min="0.1" max="5.0" value="1.0" step="0.1" oninput="updateTextureScale()">
             <span id="textureScaleValue">1.0</span>
         </div>
+
+        <div>
+            <span>Texture U Shift:</label>
+            <span id="textureShiftUValue">0.0</span>
+        </div>
+
+        <div>
+            <span>Texture V Shift:</label>
+            <span id="textureShiftVValue">0.0</span>
+        </div>
     </div>
 </body>
 
